@@ -28,6 +28,11 @@ $tmp = array(
 		'xtype' => 'textfield',
 		'area' => 'ms2gallery_resource',
 	),
+	'disable_for_templates' => array(
+		'value' => '',
+		'xtype' => 'textfield',
+		'area' => 'ms2gallery_resource',
+	),
 	'set_placeholders' => array(
 		'value' => false,
 		'xtype' => 'combo-boolean',
