@@ -2,6 +2,7 @@ Changelog for ms2Gallery.
 
 1.3.2-pl
 ==============
+- [#5] Added system setting for disabling gallery tab for specified templates.
 - [#3] Files are removed along with resources.
 
 1.3.1-pl
